// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brute force ArrayBuffer | ArrayBuffer 1`] = `
{
  "error": "PENDING",
  "inputs": [
    ArrayBuffer [],
    ArrayBuffer [],
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": true,
  "result": false,
}
`;

exports[`brute force BigInt | BigInt 1`] = `
{
  "error": {
    "message": "BigInt.prototype.toString requires that 'this' be a BigInt",
    "type": "TypeError",
  },
  "inputs": [
    9007199254740991n,
    9007199254740991n,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": true,
  "result": "PENDING",
}
`;

exports[`brute force DataView | DataView 1`] = `
{
  "error": "PENDING",
  "inputs": [
    DataView [],
    DataView [],
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": true,
  "result": false,
}
`;

exports[`brute force GeneratorFunction | GeneratorFunction 1`] = `
{
  "error": {
    "message": "Function.prototype.toString requires that 'this' be a Function",
    "type": "TypeError",
  },
  "inputs": [
    [Function],
    [Function],
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": true,
  "result": "PENDING",
}
`;

exports[`brute force Int16Array | Int16Array 1`] = `
{
  "error": {
    "message": "Method %TypedArray%.prototype.join called on incompatible receiver [object Object]",
    "type": "TypeError",
  },
  "inputs": [
    Int16Array [
      0,
      0,
    ],
    Int16Array [
      0,
      0,
    ],
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": true,
  "result": "PENDING",
}
`;

exports[`brute force Map | Map 1`] = `
{
  "error": "PENDING",
  "inputs": [
    Map {
      "foo" => "bar",
    },
    Map {
      "foo" => "bar",
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": true,
  "result": false,
}
`;

exports[`brute force Symbol | Symbol 1`] = `
{
  "error": {
    "message": "Symbol.prototype.toString requires that 'this' be a Symbol",
    "type": "TypeError",
  },
  "inputs": [
    Symbol(foo),
    Symbol(foo),
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": true,
  "result": "PENDING",
}
`;

exports[`brute force WeakMap | WeakMap 1`] = `
{
  "error": "PENDING",
  "inputs": [
    WeakMap {},
    WeakMap {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": true,
  "result": false,
}
`;

exports[`brute force WeakSet | WeakSet 1`] = `
{
  "error": "PENDING",
  "inputs": [
    WeakSet {},
    WeakSet {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": true,
  "result": false,
}
`;
